--- a/public/css/style.css
+++ b/public/css/style.css
@@ -240,7 +240,6 @@ text-align: center;
     color:#fff;
     padding-top: 2em;
     padding-bottom: 2em;
-    margin-top: 1em;
 }
 
 #mahasiswa-baru ul{
@@ -287,6 +286,7 @@ text-align: center;
 
 #form-pendaftaran{
     background-color: #1f6f8b;
+    padding-bottom: 2em;
 }
 
 #form-pendaftaran .white-text{
