--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,13 +121,144 @@ nav .navbar-nav li a {
     color: black !important;
 }
 
-/***********************************************************************************index page *********************************/
 
-header h1,
-header p {
+/**** Mahasiswa baru ****/
+#mahasiswa-baru .jumbotron{
+    color: #fff;
+    background: url("/resources/logo/banner.jpg") no-repeat center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: -0.1em; 
+}
+
+
+#mahasiswa-baru .card-img-top {
+    width: 15em;
+    height: 12em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 2%;
+    object-fit: contain;
+}
+
+#mahasiswa-baru .card-text {
+    text-align: justify;
+}
+
+#mahasiswa-baru .card{
+    box-shadow: 5x 5px 10px 10px #b3d9ff;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    border-radius: 1em 1em 1em 1em;
+    border: 1px #fff;
+}
+
+#mahasiswa-baru .card-title {
+    text-align: center;
+}
+
+#mahasiswa-baru .mahasiswa-baru-question{
+    background-color: #00909e;
+    color:#fff;
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+#mahasiswa-baru ul{
+    list-style-type: none;
+    text-decoration: none;
+}
+
+#mahasiswa-baru li{
+    text-align: center;
+}
+
+/**********end mahasiswa baru *************/
+
+/************ gelombang-pendaftaran**********/
+#gelombang-pendaftaran{
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+#gelombang-pendaftaran h2{
+    color: #142850;
+}
+
+#gelombang-pendaftaran .card{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+/************ gelombang-pendaftaran**********/
+
+/*****merdeka belajar*****/
+
+#merdeka-belajar{
+    background-color: #f1f6f9;
+    padding-bottom: 2em;
+}
+
+#merdeka-belajar h3{
+    color: #142850;
+}
+
+#merdeka-belajar img{
+    width: 7em;
+    height: 7em;
+}
+
+#merdeka-belajar .card-header{
+    background-color: #27496d;
+    border-radius: 1em 1em 0em 0em;
+}
+
+#merdeka-belajar .card-header h5{
     color: #fff;
 }
 
+#merdeka-belajar .card{
+    min-height: 23em;
+    margin-top: -1em;
+}
+
+#merdeka-belajar .btn-berminat{
+    width: 23em; 
+    background-color:#1f6f8b; 
+    border-radius:1em 1em 1em 1em;
+    border: none;
+}
+
+/**********/
+
+/*************Alur Pendaftaran************/
+#alur-pendaftaran .card{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+/*************End Alur Pendaftaran************/
+
+/**** Form Pendaftaran ****/
+#form-pendaftaran h2,h3{
+    font-size: 1.5rem;
+}
+
+#form-pendaftaran{
+    background-color: #1f6f8b;
+    padding-bottom: 2em;
+}
+
+#form-pendaftaran .white-text{
+    color: #ffffff;
+}
+
+#form-pendaftaran img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+/**** end Form Pendaftaran ****/
 
 /******* Contact Us ******/
 #contact-us{
@@ -162,145 +293,6 @@ header p {
 }
 
 /******* contact Us ******/
-
-/******* QA ******/
-#qa .faq-title{
-    margin-top: 1.7em;
-    text-align: center;
-    color: #0e9aa7;
-}
-
-#qa .card{
-    min-height: 15rem;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    padding-top: 10px;
-    padding-left: 20px;
-    padding-right: 12px;
-    text-align: justify;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.73);
-}
-
-#qa .qa-icon{
-    width: 44px;
-    height: 44px;
-    float: left;
-    margin-right: 7px;
-}
-
-#qa .qa-question{
-    font-size: 1.1em;
-    margin-top: 10px;
-}
-/******* end QA******/
-
-
-/**** Mahasiswa baru ****/
-#mahasiswa-baru .maba-header{
-    color: #fff;
-    background-color: #0e9aa7;
-    padding-top: 2em;
-    padding-bottom: 0.5em;
-}
-
-#mahasiswa-baru .hero-image{
-    width: 30em;
-    height: 30em;
-    
-}
-
-#mahasiswa-baru .card-img-top {
-    width: 15em;
-    height: 12em;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 2%;
-    object-fit: contain;
-}
-
-#mahasiswa-baru .card-text {
-    text-align: justify;
-}
-
-
-
-#mahasiswa-baru .card {
-    box-shadow: 5px 5px 0px 0px #b3d9ff;
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-#mahasiswa-baru .card-title {
-text-align: center;
-}
-
-#mahasiswa-baru .mahasiswa-baru-question{
-    background-color: #00909e;
-    color:#fff;
-    padding-top: 2em;
-    padding-bottom: 2em;
-}
-
-#mahasiswa-baru ul{
-    list-style-type: none;
-    text-decoration: none;
-}
-
-#mahasiswa-baru li{
-    text-align: center;
-}
-
-/**********end mahasiswa baru *************/
-
-/*****merdeka belajar*****/
-#merdeka-belajar img{
-    width: 7em;
-    height: 7em;
-}
-
-#merdeka-belajar .card-header{
-    background-color: #f4f4f2;
-}
-
-#merdeka-belajar .card{
-    min-height: 23em;
-}
-
-#merdeka-belajar .btn-berminat{
-    width: 23em; 
-    background-color:#1f6f8b; 
-    border-radius:1em 1em 1em 1em;
-}
-
-/**********/
-
-
-
-/**** Mahasiswa baru ****/
-
-/**** Form Pendaftaran ****/
-#form-pendaftaran h2,h3{
-    font-size: 1.5rem;
-}
-
-#form-pendaftaran{
-    background-color: #1f6f8b;
-    padding-bottom: 2em;
-}
-
-#form-pendaftaran .white-text{
-    color: #ffffff;
-}
-
-#form-pendaftaran img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-/**** end Form Pendaftaran ****/
 
 /**** Validated ****/
 #validated {
@@ -354,11 +346,3 @@ text-align: center;
     box-shadow: 5px 5px 0px 0px #b3d9ff;
 }
 /****************end daftar-pendaftar*************/
-
-/***************** faq *********/
-#daftarfaq .card{
-    padding: 2em 2em 2em 2em;
-    margin-bottom: 2em;
-}
-
-/***************** end faq *********/
